# sixpander-juce8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Test.filtergraph
plugin/: CMakeLists.txt
plugin/include/: CustomLookAndFeel.h  DebugUtils.h  GainSmoother.h  MathUtil.h  MeterComponent.h  RotaryKnob.h  Sixpander.h  SixpanderEditor.h
plugin/src/: MeterComponent.cpp  RotaryKnob.cpp  Sixpander.cpp  SixpanderEditor.cpp
test/: CMakeLists.txt  TestGainSmoother.cpp
